--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,34 @@
+2020-10-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* cidtype0.c, cidtype2.c, type0.c: User defined CID-to-GID
+	PostScript CMap with filename of the form
+	REGISTRY-ORDERING-PSFontName can be loaded (if exist) for
+	mapping CIDs to GIDs. This feature can be used for directory
+	mapping CIDs to GIDs instead of
+	CID -> to-code CMaps -> TrueType cmap -> GID route.
+	* data/Adobe-Japan1-YuMincho-Regular: An example of CID-to-GID
+	CMap file.
+	* configure.ac: Version 20201019.
+
+2020-10-14  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* tt_cmap.c: Fix a bug that checking array indices is wrong.
+	* cidtype2.c: Warning message when CID is mapped to a sequence
+	of several Unicode characters is corrected. Fix a wrong
+	assumption introduced by xdvipdfmx.
+	* configure.ac: Version 20201014.
+
+2020-10-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* dvi.c: Fix problems introduced by the changes on 2020/10/03.
+	Fix a possible problem of invalid access. Fix a problem that
+	non-BMP characters are not handled properly for the "unicode"
+	encoding.
+	* spc_pdfm.c: pdf:bcolor and pdf:scolor accept both fill and
+	stroke color specified at the same time. Change the behavior
+	when an indirect object is specified for pdf:pageresources.
+	* configure.ac: Version 20201008.
+
 2020-10-06  Akira Kakuto  <kakuto@w32tex.org>
 
 	* spc_dvips.c: Add an option -dALLOWPSTRANSPARENCY in
