--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,39 @@
+2021-01-09  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* cidtype0.c, cidtype2.c, pdffont.[ch], type0.c: Fix a bug
+	that vertical metrics are not written. Introduced in rev.56400.
+	* configure.ac: Version 20210109.
+
+2020-12-16  Karl Berry  <karl@freefriends.org>
+
+	* dvipdfmx.c (show_usage): -f loads an additional map file,
+	does not omit loading of default map(s).
+	https://tug.org/pipermail/dvipdfmx/2020-December/000146.html
+
+2020-12-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* spc_pdfm.c: Fix a bug introduced in rev.56265: When the
+	resource dictionary (of some resource category) is an indirect
+	object and then pdf:put operation is done against that
+	resource category, the operation fails. Now this situation is
+	taken into account. (The content of old resource is merged
+	into new one).
+	* configure.ac: Version 20201216.
+
+2020-12-14  Akira Kakuto  <kakuto@w32tex.org>
+
+	* pkfont.c: Fix an incorrect argument for mktexpk.
+	https://tug.org/pipermail/dvipdfmx/2020-December/000142.html.
+	* configure.ac: Version 20201214.
+
+2020-11-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* spc_html.c: Fix a bug that html-special was not working
+	after the changes introduced in rev.55722 (pdf:bann accepts a
+	reference ID).
+	* type0.c: Add pseudo-unique tag to ToUnicode CMap name again.
+	* configure.ac: Version 20201111.
+
 2020-10-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* pdfximage.c: Fix a bug that mps images are not reused when
